Get stuff working better
