# generated-api/api/index.ts
@@ -1,40 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-// Generated by Microsoft Kiota
-// @ts-ignore
-import { PartyRequestBuilderNavigationMetadata, type PartyRequestBuilder } from './party/index.js';
-// @ts-ignore
-import { type WaitinglistRequestBuilder, WaitinglistRequestBuilderNavigationMetadata } from './waitinglist/index.js';
-// @ts-ignore
-import { type BaseRequestBuilder, type KeysToExcludeForNavigationMetadata, type NavigationMetadata } from '@microsoft/kiota-abstractions';
-
-/**
- * Builds and executes requests for operations under /api
- */
-export interface ApiRequestBuilder extends BaseRequestBuilder<ApiRequestBuilder> {
-    /**
-     * The party property
-     */
-    get party(): PartyRequestBuilder;
-    /**
-     * The waitinglist property
-     */
-    get waitinglist(): WaitinglistRequestBuilder;
-}
-/**
- * Uri template for the request builder.
- */
-export const ApiRequestBuilderUriTemplate = "{+baseurl}/api";
-/**
- * Metadata for all the navigation properties in the request builder.
- */
-export const ApiRequestBuilderNavigationMetadata: Record<Exclude<keyof ApiRequestBuilder, KeysToExcludeForNavigationMetadata>, NavigationMetadata> = {
-    party: {
-        navigationMetadata: PartyRequestBuilderNavigationMetadata,
-    },
-    waitinglist: {
-        navigationMetadata: WaitinglistRequestBuilderNavigationMetadata,
-    },
-};
-/* tslint:enable */
-/* eslint-enable */
