# generated-api/api/party/checkIn/index.ts
@@ -1,45 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-// Generated by Microsoft Kiota
-// @ts-ignore
-import { createPartyModelResultObjectFromDiscriminatorValue, serializeCheckInRequest, serializePartyModelResultObject, type CheckInRequest, type PartyModelResultObject } from '../../../models/index.js';
-// @ts-ignore
-import { type BaseRequestBuilder, type Parsable, type ParsableFactory, type RequestConfiguration, type RequestInformation, type RequestsMetadata } from '@microsoft/kiota-abstractions';
-
-/**
- * Builds and executes requests for operations under /api/party/check-in
- */
-export interface CheckInRequestBuilder extends BaseRequestBuilder<CheckInRequestBuilder> {
-    /**
-     * @param body The request body
-     * @param requestConfiguration Configuration for the request such as headers, query parameters, and middleware options.
-     * @returns {Promise<PartyModelResultObject>}
-     */
-     post(body: CheckInRequest, requestConfiguration?: RequestConfiguration<object> | undefined) : Promise<PartyModelResultObject | undefined>;
-    /**
-     * @param body The request body
-     * @param requestConfiguration Configuration for the request such as headers, query parameters, and middleware options.
-     * @returns {RequestInformation}
-     */
-     toPostRequestInformation(body: CheckInRequest, requestConfiguration?: RequestConfiguration<object> | undefined) : RequestInformation;
-}
-/**
- * Uri template for the request builder.
- */
-export const CheckInRequestBuilderUriTemplate = "{+baseurl}/api/party/check-in";
-/**
- * Metadata for all the requests in the request builder.
- */
-export const CheckInRequestBuilderRequestsMetadata: RequestsMetadata = {
-    post: {
-        uriTemplate: CheckInRequestBuilderUriTemplate,
-        responseBodyContentType: "application/json, text/plain;q=0.9",
-        adapterMethodName: "send",
-        responseBodyFactory:  createPartyModelResultObjectFromDiscriminatorValue,
-        requestBodyContentType: "application/json",
-        requestBodySerializer: serializeCheckInRequest,
-        requestInformationContentSetMethod: "setContentFromParsable",
-    },
-};
-/* tslint:enable */
-/* eslint-enable */
