# generated-api/api/waitinglist/addPartyToWaitinglist/index.ts
@@ -1,45 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-// Generated by Microsoft Kiota
-// @ts-ignore
-import { createAddToQueueResponseFromDiscriminatorValue, serializeAddToQueueRequest, serializeAddToQueueResponse, type AddToQueueRequest, type AddToQueueResponse } from '../../../models/index.js';
-// @ts-ignore
-import { type BaseRequestBuilder, type Parsable, type ParsableFactory, type RequestConfiguration, type RequestInformation, type RequestsMetadata } from '@microsoft/kiota-abstractions';
-
-/**
- * Builds and executes requests for operations under /api/waitinglist/add-party-to-waitinglist
- */
-export interface AddPartyToWaitinglistRequestBuilder extends BaseRequestBuilder<AddPartyToWaitinglistRequestBuilder> {
-    /**
-     * @param body The request body
-     * @param requestConfiguration Configuration for the request such as headers, query parameters, and middleware options.
-     * @returns {Promise<AddToQueueResponse>}
-     */
-     post(body: AddToQueueRequest, requestConfiguration?: RequestConfiguration<object> | undefined) : Promise<AddToQueueResponse | undefined>;
-    /**
-     * @param body The request body
-     * @param requestConfiguration Configuration for the request such as headers, query parameters, and middleware options.
-     * @returns {RequestInformation}
-     */
-     toPostRequestInformation(body: AddToQueueRequest, requestConfiguration?: RequestConfiguration<object> | undefined) : RequestInformation;
-}
-/**
- * Uri template for the request builder.
- */
-export const AddPartyToWaitinglistRequestBuilderUriTemplate = "{+baseurl}/api/waitinglist/add-party-to-waitinglist";
-/**
- * Metadata for all the requests in the request builder.
- */
-export const AddPartyToWaitinglistRequestBuilderRequestsMetadata: RequestsMetadata = {
-    post: {
-        uriTemplate: AddPartyToWaitinglistRequestBuilderUriTemplate,
-        responseBodyContentType: "application/json, text/plain;q=0.9",
-        adapterMethodName: "send",
-        responseBodyFactory:  createAddToQueueResponseFromDiscriminatorValue,
-        requestBodyContentType: "application/json",
-        requestBodySerializer: serializeAddToQueueRequest,
-        requestInformationContentSetMethod: "setContentFromParsable",
-    },
-};
-/* tslint:enable */
-/* eslint-enable */
