# generated-api/api/waitinglist/index.ts
@@ -1,59 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-// Generated by Microsoft Kiota
-// @ts-ignore
-import { AddPartyToWaitinglistRequestBuilderRequestsMetadata, type AddPartyToWaitinglistRequestBuilder } from './addPartyToWaitinglist/index.js';
-// @ts-ignore
-import { CheckInRequestBuilderRequestsMetadata, type CheckInRequestBuilder } from './checkIn/index.js';
-// @ts-ignore
-import { type WaitingListRequestBuilder as Ia5670c8161c6d2e18a3fdf7f23555059604e4b91ff2f581b26edb16ca530ad87, WaitingListRequestBuilderRequestsMetadata } from './waitingList/index.js';
-// @ts-ignore
-import { type WaitinglistMetaDataRequestBuilder, WaitinglistMetaDataRequestBuilderRequestsMetadata } from './waitinglistMetaData/index.js';
-// @ts-ignore
-import { type BaseRequestBuilder, type KeysToExcludeForNavigationMetadata, type NavigationMetadata } from '@microsoft/kiota-abstractions';
-
-/**
- * Builds and executes requests for operations under /api/waitinglist
- */
-export interface WaitinglistRequestBuilder extends BaseRequestBuilder<WaitinglistRequestBuilder> {
-    /**
-     * The addPartyToWaitinglist property
-     */
-    get addPartyToWaitinglist(): AddPartyToWaitinglistRequestBuilder;
-    /**
-     * The checkIn property
-     */
-    get checkIn(): CheckInRequestBuilder;
-    /**
-     * The waitingList property
-     */
-    get waitingList(): Ia5670c8161c6d2e18a3fdf7f23555059604e4b91ff2f581b26edb16ca530ad87;
-    /**
-     * The waitinglistMetaData property
-     */
-    get waitinglistMetaData(): WaitinglistMetaDataRequestBuilder;
-}
-/**
- * Uri template for the request builder.
- */
-export const WaitinglistRequestBuilderUriTemplate = "{+baseurl}/api/waitinglist";
-/**
- * Metadata for all the navigation properties in the request builder.
- */
-export const WaitinglistRequestBuilderNavigationMetadata: Record<Exclude<keyof WaitinglistRequestBuilder, KeysToExcludeForNavigationMetadata>, NavigationMetadata> = {
-    addPartyToWaitinglist: {
-        requestsMetadata: AddPartyToWaitinglistRequestBuilderRequestsMetadata,
-    },
-    checkIn: {
-        requestsMetadata: CheckInRequestBuilderRequestsMetadata,
-    },
-    waitingList: {
-        requestsMetadata: WaitingListRequestBuilderRequestsMetadata,
-        navigationMetadata: WaitinglistRequestBuilderNavigationMetadata,
-    },
-    waitinglistMetaData: {
-        requestsMetadata: WaitinglistMetaDataRequestBuilderRequestsMetadata,
-    },
-};
-/* tslint:enable */
-/* eslint-enable */
