# generated-api/api/waitinglist/waitingList/index.ts
@@ -1,45 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-// Generated by Microsoft Kiota
-// @ts-ignore
-import { createWaitingListResponseFromDiscriminatorValue, serializeWaitingListRequest, serializeWaitingListResponse, type WaitingListRequest, type WaitingListResponse } from '../../../models/index.js';
-// @ts-ignore
-import { type BaseRequestBuilder, type Parsable, type ParsableFactory, type RequestConfiguration, type RequestInformation, type RequestsMetadata } from '@microsoft/kiota-abstractions';
-
-/**
- * Builds and executes requests for operations under /api/waitinglist/waiting-list
- */
-export interface WaitingListRequestBuilder extends BaseRequestBuilder<WaitingListRequestBuilder> {
-    /**
-     * @param body The request body
-     * @param requestConfiguration Configuration for the request such as headers, query parameters, and middleware options.
-     * @returns {Promise<WaitingListResponse>}
-     */
-     get(body: WaitingListRequest, requestConfiguration?: RequestConfiguration<object> | undefined) : Promise<WaitingListResponse | undefined>;
-    /**
-     * @param body The request body
-     * @param requestConfiguration Configuration for the request such as headers, query parameters, and middleware options.
-     * @returns {RequestInformation}
-     */
-     toGetRequestInformation(body: WaitingListRequest, requestConfiguration?: RequestConfiguration<object> | undefined) : RequestInformation;
-}
-/**
- * Uri template for the request builder.
- */
-export const WaitingListRequestBuilderUriTemplate = "{+baseurl}/api/waitinglist/waiting-list";
-/**
- * Metadata for all the requests in the request builder.
- */
-export const WaitingListRequestBuilderRequestsMetadata: RequestsMetadata = {
-    get: {
-        uriTemplate: WaitingListRequestBuilderUriTemplate,
-        responseBodyContentType: "application/json, text/plain;q=0.9",
-        adapterMethodName: "send",
-        responseBodyFactory:  createWaitingListResponseFromDiscriminatorValue,
-        requestBodyContentType: "application/json",
-        requestBodySerializer: serializeWaitingListRequest,
-        requestInformationContentSetMethod: "setContentFromParsable",
-    },
-};
-/* tslint:enable */
-/* eslint-enable */
