# generated-api/api/waitinglist/waitinglistMetaData/index.ts
@@ -1,40 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-// Generated by Microsoft Kiota
-// @ts-ignore
-import { createWaitingListMetaDataResponseFromDiscriminatorValue, type WaitingListMetaDataResponse } from '../../../models/index.js';
-// @ts-ignore
-import { type BaseRequestBuilder, type Parsable, type ParsableFactory, type RequestConfiguration, type RequestInformation, type RequestsMetadata } from '@microsoft/kiota-abstractions';
-
-/**
- * Builds and executes requests for operations under /api/waitinglist/waitinglist-meta-data
- */
-export interface WaitinglistMetaDataRequestBuilder extends BaseRequestBuilder<WaitinglistMetaDataRequestBuilder> {
-    /**
-     * @param requestConfiguration Configuration for the request such as headers, query parameters, and middleware options.
-     * @returns {Promise<WaitingListMetaDataResponse>}
-     */
-     get(requestConfiguration?: RequestConfiguration<object> | undefined) : Promise<WaitingListMetaDataResponse | undefined>;
-    /**
-     * @param requestConfiguration Configuration for the request such as headers, query parameters, and middleware options.
-     * @returns {RequestInformation}
-     */
-     toGetRequestInformation(requestConfiguration?: RequestConfiguration<object> | undefined) : RequestInformation;
-}
-/**
- * Uri template for the request builder.
- */
-export const WaitinglistMetaDataRequestBuilderUriTemplate = "{+baseurl}/api/waitinglist/waitinglist-meta-data";
-/**
- * Metadata for all the requests in the request builder.
- */
-export const WaitinglistMetaDataRequestBuilderRequestsMetadata: RequestsMetadata = {
-    get: {
-        uriTemplate: WaitinglistMetaDataRequestBuilderUriTemplate,
-        responseBodyContentType: "application/json, text/plain;q=0.9",
-        adapterMethodName: "send",
-        responseBodyFactory:  createWaitingListMetaDataResponseFromDiscriminatorValue,
-    },
-};
-/* tslint:enable */
-/* eslint-enable */
