# src/GeneratedClient/apis/PartyApi.ts
@@ -1,72 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * WaitingList
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-import * as runtime from '../runtime';
-import type {
-  CheckInRequest,
-  PartyModelResultObject,
-} from '../models/index';
-import {
-    CheckInRequestFromJSON,
-    CheckInRequestToJSON,
-    PartyModelResultObjectFromJSON,
-    PartyModelResultObjectToJSON,
-} from '../models/index';
-
-export interface ApiPartyCheckInPostRequest {
-    checkInRequest?: CheckInRequest;
-}
-
-/**
- * 
- */
-export class PartyApi extends runtime.BaseAPI {
-
-    /**
-     */
-    async apiPartyCheckInPostRaw(requestParameters: ApiPartyCheckInPostRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<PartyModelResultObject>> {
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        headerParameters['Content-Type'] = 'application/json';
-
-        if (this.configuration && this.configuration.accessToken) {
-            const token = this.configuration.accessToken;
-            const tokenString = await token("Bearer", []);
-
-            if (tokenString) {
-                headerParameters["Authorization"] = `Bearer ${tokenString}`;
-            }
-        }
-        const response = await this.request({
-            path: `/api/party/check-in`,
-            method: 'POST',
-            headers: headerParameters,
-            query: queryParameters,
-            body: CheckInRequestToJSON(requestParameters['checkInRequest']),
-        }, initOverrides);
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => PartyModelResultObjectFromJSON(jsonValue));
-    }
-
-    /**
-     */
-    async apiPartyCheckInPost(requestParameters: ApiPartyCheckInPostRequest = {}, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<PartyModelResultObject> {
-        const response = await this.apiPartyCheckInPostRaw(requestParameters, initOverrides);
-        return await response.value();
-    }
-
-}
